--- a/Natours/starter/sass/main.scss
+++ b/Natours/starter/sass/main.scss
@@ -1,174 +1,14 @@
-$color-primary: #55c57a;
-$color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
-$color-gray-dark: #777;
-$color-white: #fff;
-$color-black: #000;
+@import "abstract/functions";
+@import "abstract/mixins";
+@import "abstract/variables";
 
-*,
-*::after,
-*::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
-}
+@import "base/base";
+@import "base/animation";
+@import "base/typography";
+@import "base/utilities";
 
-html {
-    font-size: 62.5%;
-}
+@import "pages/home";
 
-body {
-    font-family: "Lato", sans-serif;
-    font-weight: 400;
-    line-height: 1.7;
-    color: $color-gray-dark;
-    padding: 3rem;
-    box-sizing: border-box;
-}
+@import "components/button";
 
-.header {
-    position: relative;
-    height: 95vh;
-    background-image: linear-gradient(to right bottom, 
-        rgba($color-primary-light,0.8), 
-        rgba($color-primary-dark,0.8)), url('../img/hero.jpg');
-    object-fit: cover;
-    background-position: top;
-    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-
-    &__logo-box {
-        position: absolute;
-        top: 4rem;
-        left: 4rem;    
-    }
-
-    &__logo {
-        height: 3.5rem;    
-    }
-
-    &__text-box {
-        position: absolute;
-        top: 40%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        text-align: center;
-    }
-}
-
-
-
-.heading-primary {
-    color: $color-white;
-    text-transform: uppercase;
-    margin-bottom: 6rem;
-    backface-visibility: hidden;
-    
-    &--main {
-        display: block;
-        font-size: 6rem;
-        font-weight: 400;
-        letter-spacing: 3.5rem;
-        animation-name: moveInUp;
-        animation-duration: 1s;
-    }
-
-    &--sub {
-        display: block;
-        font-size: 2rem;
-        font-weight: 700;
-        letter-spacing: 1.64rem;
-        animation-name: moveInRight;
-        animation-duration: 1s;
-    }
-}
-
-@keyframes moveInUp {
-    0% {
-        opacity: 0;
-        transform: translateY(-10rem);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-@keyframes moveInRight {
-    0% {
-        opacity: 0;
-        transform: translateX(10rem);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateX(0);
-    }
-}
-
-@keyframes moveInBottom {
-    0% {
-        opacity: 0;
-        transform: translateY(10rem);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-.btn {
-    &:link, &:visited {
-        position: relative;
-        text-transform: uppercase;
-        text-decoration: none;
-        display: inline-block;
-        padding: 1.5rem 4rem;
-        border-radius: 10rem;
-        transition: all 0.2s;
-        font-size: 1.6rem;
-    }
-
-    &:hover {
-        transform: translateY(-0.3rem);
-        box-shadow: 0 0.1rem 0.2rem rgba($color-black 0.2);
-
-        &::after {
-            transform: scale(1.5);
-            opacity: 0;
-        }
-    }
-
-    &:active {
-        transform: translateY(-0.1rem);
-        box-shadow: 0 0.5px 0.1px rgba($color-black 0.2);
-    }
-
-    &::after {
-        content: "";
-        display: inline-block;
-        height: 100%;
-        width: 100%;
-        border-radius: 10rem;
-        position: absolute;
-        top: 0;
-        right: 0;
-        z-index: -1;
-        transition: all 0.4s;
-    }
-
-    &--white {
-        background-color: $color-white;
-        color: $color-gray-dark;
-
-        &::after {
-            background-color: $color-white;
-        }
-    }
-    
-    &--animated {
-        animation: moveInBottom 1s ease-out 0.75s;
-        animation-fill-mode: backwards;
-    }
-}
+@import "layout/header";
