--- a/Natours/starter/sass/components/__button.scss
+++ b/Natours/starter/sass/components/__button.scss
@@ -12,7 +12,7 @@
 
     &:hover {
         transform: translateY(-0.3rem);
-        box-shadow: 0 0.1rem 0.2rem rgba($color-black 0.2);
+        box-shadow: 0 0.1rem 0.2rem rgba($color-black, 0.2);
 
         &::after {
             transform: scale(1.5);
@@ -22,7 +22,7 @@
 
     &:active {
         transform: translateY(-0.1rem);
-        box-shadow: 0 0.5px 0.1px rgba($color-black 0.2);
+        box-shadow: 0 0.5px 0.1px rgba($color-black, 0.2);
     }
 
     &::after {
