--- a/Natours/starter/sass/main.scss
+++ b/Natours/starter/sass/main.scss
@@ -3,12 +3,13 @@
 @import "abstract/variables";
 
 @import "base/base";
-@import "base/animation";
+@import "base/animations";
 @import "base/typography";
 @import "base/utilities";
 
 @import "pages/home";
 
-@import "components/button";
+@import "components/_button";
 
+@import "layout/grid";
 @import "layout/header";
