--- a/Natours/starter/sass/abstract/_variables.scss
+++ b/Natours/starter/sass/abstract/_variables.scss
@@ -5,6 +5,7 @@ $color-primary-dark: #28b485;
 $color-gray-dark: #777;
 $color-white: #fff;
 $color-black: #000;
+$color-column: orange;
 
 // Grid
 $grid-width: 114rem;
