--- a/Natours/starter/sass/layout/_grid.scss
+++ b/Natours/starter/sass/layout/_grid.scss
@@ -9,15 +9,40 @@
 
     @include claerfix;
 
-    .col-1-of-2 {
-        width: calc((100% - #{$gutter-horizontal}) / 2);
-        // you use #{} for SCSS into CSS variable interpolation
-            // The calc function is CSS specific
-        background-color: orange;
+    // select all elements that have class name that starts with 'col-'
+    [class^="col-"] {
+        background-color: $color-column;
         float: left;
 
         &:not(:last-child) {
             margin-right: $gutter-horizontal;
         }
+    }
+
+    .col-1-of-2 {
+        width: calc((100% - #{$gutter-horizontal}) / 2);
+        // you use #{} for SCSS into CSS variable interpolation
+            // The calc function is CSS specific
+    }
+
+    .col-1-of-3 {
+        width: calc((100% - 2 * #{$gutter-horizontal}) / 3);
+    }
+
+    .col-2-of-3 {
+        // 2 * col-1-of-3 + gutter width
+        width: calc(2 * ((100% - 2 * #{$gutter-horizontal}) / 3) + #{$gutter-horizontal});
+    }
+
+    .col-1-of-4 {
+        width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
+    }
+
+    .col-2-of-4 {
+        width: calc( 2 * ((100% - 3 * #{$gutter-horizontal}) / 4) + ( #{$gutter-horizontal}));
+    }
+
+    .col-3-of-4 {
+        width: calc( 3 * ((100% - 3 * #{$gutter-horizontal}) / 4) + (2 *  #{$gutter-horizontal}));
     }
 }
