--- a/Natours/starter/sass/abstract/_variables.scss
+++ b/Natours/starter/sass/abstract/_variables.scss
@@ -5,7 +5,7 @@ $color-primary-dark: #28b485;
 $color-gray-dark: #777;
 $color-white: #fff;
 $color-black: #000;
-$color-column: orange;
+$color-gray-light-1: #f7f7f7;
 
 // Grid
 $grid-width: 114rem;
