--- a/Natours/starter/sass/base/_typography.scss
+++ b/Natours/starter/sass/base/_typography.scss
@@ -30,3 +30,15 @@ body {
     color: $color-gray-dark;
     padding: 3rem;
 }
+
+.heading-secondary {
+    font-size: 3.5rem;
+    text-emphasis: uppercase;
+    font-weight: 700;
+    display: inline-block;
+    background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+    -webkit-background-clip: text; // makes the background image only behind the text
+    background-clip: text;
+    color: transparent; // so we can see background image
+    letter-spacing: 2px;
+}
