--- a/Natours/starter/sass/abstract/_variables.scss
+++ b/Natours/starter/sass/abstract/_variables.scss
@@ -7,6 +7,9 @@ $color-white: #fff;
 $color-black: #000;
 $color-gray-light-1: #f7f7f7;
 
+// Font
+$default-font-size: 1.6rem;
+
 // Grid
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
