Complete the 'Building the about section - part 3'

--- a/Natours/starter/sass/main.scss
+++ b/Natours/starter/sass/main.scss
@@ -9,7 +9,8 @@
 
 @import "pages/home";
 
-@import "components/_button";
+@import "components/button";
+@import "components/composition";
 
 @import "layout/grid";
 @import "layout/header";
