--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -191,6 +191,14 @@ body {
   .composition:hover .composition__photo:not(:hover) {
     transform: scale(0.95); }
 
+.feature-box {
+  background-color: rgba(255, 255, 255, 0.8);
+  font-size: 1.5rem;
+  padding: 2.5rem;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem; }
+
 .row {
   max-width: 114rem;
   margin: 0 auto; }
